_generated-doc/2.7/config/quarkus-micrometer-config-group-config-grpc-client-config-group.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-micrometer-config-group-config-grpc-client-config-group_configuration]]link:#quarkus-micrometer-config-group-config-grpc-client-config-group_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-grpc-client-config-group_quarkus.micrometer.binder.grpc-client.enabled]]`link:#quarkus-micrometer-config-group-config-grpc-client-config-group_quarkus.micrometer.binder.grpc-client.enabled[quarkus.micrometer.binder.grpc-client.enabled]`

[.description]
--
gRPC Client metrics support. 
 Support for gRPC client metrics will be enabled if Micrometer support is enabled, the gRPC client interfaces are on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|

|===