_generated-doc/2.16/config/quarkus-micrometer-config-group-config-grpc-client-config-group.adoc

:summaryTableId: quarkus-micrometer-config-group-config-grpc-client-config-group
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-micrometer-config-group-config-grpc-client-config-group_configuration]]link:#quarkus-micrometer-config-group-config-grpc-client-config-group_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-grpc-client-config-group_quarkus.micrometer.binder.grpc-client.enabled]]`link:#quarkus-micrometer-config-group-config-grpc-client-config-group_quarkus.micrometer.binder.grpc-client.enabled[quarkus.micrometer.binder.grpc-client.enabled]`

[.description]
--
gRPC Client metrics support. 
Support for gRPC client metrics will be enabled if Micrometer support is enabled, the gRPC client interfaces are on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_GRPC_CLIENT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_GRPC_CLIENT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|

|===